# GSeekBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pylock.toml  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  logger.py
app/database/: __init__.py  connection.py
app/database/models/: user.py
app/handlers/: __init__.py  inline.py  message.py
app/middlewares/: __init__.py  user.py
app/utils/: __init__.py  duckduckgo.py
src/gseek_bot/: main.py
src/gseek_bot/core/: __init__.py  config.py  logger.py
src/gseek_bot/database/: __init__.py  connection.py
src/gseek_bot/database/models/: __init__.py  user.py
src/gseek_bot/handlers/: __init__.py  inline.py  message.py
src/gseek_bot/middlewares/: __init__.py  user.py
src/gseek_bot/utils/: __init__.py  duckduckgo.py
