[project]
name = "gseek-bot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram>=3.20.0.post0",
    "beanie>=1.30.0, <2.1",
    "beautifulsoup4>=4.14.3, <5.0",
    "coloredlogs>=15.0.1, <16.0",
    "duckduckgo-search>=8.1.1, <9.0",
    "logging>=0.4.9.6, <1.0",
    "motor>=3.7.1, <4.0",
    "platformdirs>=4.5.1, <5.0",
    "pydantic-settings>=2.9.1, <3.0",
    "typer>=0.25.1, <1.0",
    "uvloop>=0.22.1, <1.0; sys_platform == 'linux'"
]

[project.scripts]
gseek-bot = "gseek_bot.main:cli"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true